fix: worker 로그 디코딩 진단 보강